# Aarogya_AI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: analyze.py  doctors.py  feedback.py  health.py  history.py
backend/app/core/: __init__.py  patient_context.py  response_builder.py
mediassist/: MediAssist AI — Project Plan.html  antigravity_extra_tasks.html  mediassist_directory.html  mediassist_master_dashboard.html  mediassist_plan.html  mediassist_task_ownership.html  module1_execution_plan.html  module2_execution_plan.html  module3_execution_plan.html  module4_execution_plan.html  module5_execution_plan.html  module6_execution_plan.html
