[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_first_party = ["app"]
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ["tests/", "notebooks/"]
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", "__pycache__", "*.egg-info"]
